# unifi_port_mapper

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  PROJECT_COMPLETE.md  README.md  README_FINAL.md  example.env  pyproject.toml  requirements.txt  unifi_network_mapper.py  unifi_network_troubleshooting.md
automation_results/: final_diagnostic_report.md  pipeline_results.md
docs/: .consolidation_note.md  ADVANCED_DIAGNOSTICS.md  ARCHITECTURE.md  CODEMAP.md  Control Plane.md  DETAILED_README.md  README.md  README_old.md  TRANSFORMATION_COMPLETE.md  XDG_CONFIG_SETUP.md  architecture-and-codemap.md  config-validation.md  final_accomplishments.md  implementation_tasks.md  improved_port_mapping_report.md  mcp-server-alignment-prompt.md  multi_model_analysis_report.md  phase2_completion_summary.md  port_mapping_report.md  port_update_persistence_fix.md  rspan-limitations-and-removal.md  script_structure.md  uml_diagram.md
docs/historical/: README.md  complete_session_summary.md  progress_summary.md  session_final_summary.md
specs/001-unifi-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-unifi-mcp-server/checklists/: requirements.md
specs/001-unifi-mcp-server/contracts/: tools.md
src/: __init__.py
src/scripts/: __init__.py  api_client.py  complete_automation_pipeline.py  config_manager.py  debug_port_updates.py  device_definitions.py  discover_api_endpoints.py  fix_port_persistence.py  fix_port_persistence_advanced.py  generate_topology.py  inferred_topology_generator.py  port_mapper.py  test_v2_api_update.py  topology_generator.py  unifi_capacity_planner.py  unifi_client_trace.py  unifi_config_autofix.py  unifi_config_backup.py  unifi_config_validator.py  unifi_firmware_advisor.py  unifi_ip_conflict_detector.py  unifi_lag_monitor.py  unifi_link_quality.py  unifi_lookup.py  unifi_mac_analyzer.py  unifi_network_automation.py  unifi_qos_validator.py  unifi_storm_detector.py  unifi_vlan_autofix.py  unifi_vlan_diagnostics.py
src/unifi_mapper/: __init__.py  analyze_network_capabilities.py  api_cache.py  api_client.py  api_client_refactored.py  api_fix.py  auth_manager.py  browser_verification.py  circuit_breaker.py  cli.py  completions.py  config.py  config_autofix.py  config_validation.py  device_capabilities.py  device_client.py  device_definitions.py  endpoint_builder.py  enhanced_api_client.py  enhanced_network_topology.py  exceptions.py  firewall_check.py  generate_inferred_topology.py  ground_truth_verification.py  html_parser.py  improved_topology.py  inferred_topology.py  inventory_cli.py  lldp_client.py  main.py  models.py  network_analyzer.py  network_automation.py  network_cli.py  network_topology.py  path_analysis.py  performance_testing.py  physical_verification.py  port_client.py  port_mapper.py  (+12 more)
src/unifi_mapper/advisors/: __init__.py  firmware_advisor.py
src/unifi_mapper/analysis/: __init__.py  capacity_planning.py  ip_conflicts.py  lag_monitoring.py  mac_analyzer.py  qos_validation.py  storm_detection.py  vlan_diagnostics.py
src/unifi_mapper/analyzers/: __init__.py  capacity_planner.py  link_quality.py  mac_analyzer.py  storm_detector.py
src/unifi_mapper/backup/: __init__.py  config_backup.py
src/unifi_mapper/connectivity/: traceroute.py
src/unifi_mapper/diagnostics/: connectivity_analysis.py  network_health.py  performance_analysis.py  security_audit.py
src/unifi_mapper/discovery/: find_device.py  find_ip.py  find_mac.py
src/unifi_mapper/mirroring/: __init__.py  capabilities.py  sessions.py
src/unifi_mapper/scripts/: __init__.py  unifi_ip_conflict_detector.py  unifi_lookup.py
src/unifi_mapper/tracers/: __init__.py  client_tracer.py
src/unifi_mapper/utility/: export_markdown.py  format_table.py  render_mermaid.py
src/unifi_mapper/validators/: __init__.py  lag_monitor.py  qos_validator.py
src/unifi_mcp/: __init__.py  server.py
src/unifi_mcp/models/: __init__.py  analysis.py  device.py  firewall.py  mirror.py  network_path.py  port.py  vlan.py
src/unifi_mcp/resources/: __init__.py  persona.py
src/unifi_mcp/tools/: __init__.py
src/unifi_mcp/tools/analysis/: firmware_advisor.py  link_quality.py
src/unifi_mcp/tools/connectivity/: __init__.py
src/unifi_mcp/tools/diagnostics/: __init__.py
src/unifi_mcp/tools/discovery/: __init__.py  client_trace.py
src/unifi_mcp/tools/mirroring/: capabilities.py
src/unifi_mcp/tools/topology/: __init__.py  device_tree.py  lldp_discovery.py  network_topology.py  port_map.py
src/unifi_mcp/tools/utility/: __init__.py
src/unifi_mcp/utils/: __init__.py  auth.py  client.py  errors.py  logging.py
tests/: __init__.py  conftest.py  test_config_autofix.py  test_config_validation.py  test_config_validation_integration.py  test_lldp_fix.py  test_vlan_automation.py
tests/integration/: __init__.py  test_connection.py  test_live_analysis.py  test_live_connectivity.py  test_live_discovery.py  test_live_topology.py  test_refactored_client.py
tests/unit/: __init__.py  test_api_cache.py  test_auth.py  test_auth_manager.py  test_basic.py  test_circuit_breaker.py  test_client.py  test_config.py  test_config_defaults.py  test_device_client.py  test_diagnostics.py  test_endpoint_builder.py  test_errors.py  test_foundation.py  test_input_validation.py  test_lldp_client.py  test_lldp_mac_resolution.py  test_logging.py  test_models.py  test_port_client.py  test_retry_logic.py  test_server_basic.py
tests/unit/tools/: test_connectivity.py  test_discovery.py  test_topology.py  test_utility.py
tools/: README.md  complete_automation_pipeline  debug_port_updates  discover_api_endpoints  fix_port_persistence  fix_port_persistence_advanced  test_v2_api_update  unifi_config_autofix  unifi_config_validator  unifi_ip_conflict  unifi_lookup  unifi_network_automation  unifi_vlan_autofix  unifi_vlan_diagnostics
