[project]
name = "unifi-network-mcp-server"
version = "0.1.0"
description = "MCP server for UniFi network troubleshooting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.2",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "rich>=13.9.0",
    "keyring>=25.5.0",
    "requests>=2.31.0",
    "graphviz>=0.20.0",
    "typer>=0.9.0",
]
license = { text = "MIT" }
authors = [{ name = "ataylor" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"unifi-mcp-server" = "unifi_mcp.server:main"
"unifi-mapper" = "unifi_mapper.typer_cli:app"
"unifi-mapper-legacy" = "unifi_mapper.cli:main"
"unifi-network-toolkit" = "unifi_mapper.network_cli:main"
"unifi-inventory" = "unifi_mapper.inventory_cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_mapper", "src/unifi_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/unifi_mapper", "src/unifi_mcp"]

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/env",
    "**/.ruff_cache",
    "**/.venv",
]
force-exclude = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D104", "D106"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules", "**/dist", "**/build"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: marks tests that make live API calls (deselect with '-m \"not live\"')",
    "asyncio: marks tests that use asyncio",
]

[tool.coverage.run]
source = ["src/unifi_mcp"]
branch = true

[tool.coverage.report]
exclude_also = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
]
fail_under = 90
